<resources>
    <string name="app_name">VKGroUploader</string>
    <integer name="com_vk_sdk_AppId">5028586</integer>

    <string name="action_settings">Settings</string>
    <string name="capture_image">Capture image</string>
    <string name="label_vk_login">VK Login</string>
    <string name="label_vk_logout">VK Logout</string>
    <string name="label_get_photo_button">get photo </string>
    <string name="label_send_button">send</string>
    <string name="label_clear_message">Clear</string>
    <string name="label_list_files">List Files in storage</string>
    <string name="label_back_button">Back</string>
    <string name="label_message">Message:</string>
    <string name="label_OK_button">OK</string>
    <string name="label_group_id">ID:</string>
    <string name="label_sent_button">Sent</string>
    <string name="label_delete_button">Delete</string>
    <string name="label_files_in">files/in/storage/clear/when/run</string>

    <string name="hint_message">Enter message</string>
    <string name="hint_enter_vk_group">Enter ID VK Group</string>

    <string name="title_activity_list_files">List Files</string>

    <string name="message_success_sendout">Success send</string>
    <string name="message_internet_off">Internet disable. Can not send message.</string>
    <string name="message_logoff">Need login into vk.com</string>
    <string name="message_run_send">Sending message..</string>
    <string name="message_send_nothing">Nothing send..</string>
    <string name="today">Today </string>
    <string name="about">of the order of </string>

    <string name="description_image_preview">Image Preview</string>
    <string name="label_invert">Invert</string>
    <string name="label_name">Name:</string>
    <string name="title_activity_image_files">ImageFilesActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="change_group_id">Group ID</string>
    <string name="title_activity_cam">Camera</string>
</resources>
