<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/llHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:orientation="horizontal"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="5dp">

        <TextView
            android:id="@+id/labelGroupName"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/label_vk_group_id"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:textColor="@android:color/black"/>

        <Button
            android:id="@+id/bGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"/>

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/bLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vk_login"
            android:textColor="@android:color/black"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <TextView
                android:id="@+id/labelListFiles"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/label_files_in"
                android:textColor="@android:color/black"
                android:layout_weight="1"
                />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/label_sent_button"
                android:id="@+id/bSendout"
                android:src="@android:drawable/ic_menu_delete"/>
        </LinearLayout>

        <ScrollView
            android:id="@+id/svListFiles"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:fillViewport="true">

            <TextView
                android:id="@+id/tvStorageListFiles"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
        </ScrollView>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <TextView
                android:id="@+id/labelMessage"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/label_message"
                android:textColor="@android:color/black"
                android:layout_weight="1"
                android:gravity="left"
                android:layout_marginLeft="5dp"
                android:textSize="20sp"/>

            <ImageButton
                android:id="@+id/bDeleteMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/label_clear_message"
                android:src="@android:drawable/ic_input_delete"/>
        </LinearLayout>

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:fillViewport="true">

            <EditText
                android:id="@+id/etMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_message"
                android:inputType="textAutoComplete|textMultiLine"
                android:gravity="center_vertical|center_horizontal"/>
        </ScrollView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:id="@+id/llFooter"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp">

        <ImageButton
            android:id="@+id/bPhoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/label_get_photo_button"
            android:gravity="center"
            android:src="@android:drawable/ic_menu_camera"/>

        <Space
            android:layout_width="20dp"
            android:layout_height="match_parent"
            />

        <ImageButton
            android:id="@+id/bSend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/label_send_button"
            android:src="@android:drawable/ic_menu_send"/>
    </LinearLayout>

</LinearLayout>
